add login and register authentification

--- a/src/index.css
+++ b/src/index.css
@@ -11,3 +11,27 @@ code {
   font-family: source-code-pro, Menlo, Monaco, Consolas, 'Courier New',
     monospace;
 }
+
+
+.home-container {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  height: 100vh;
+  
+  background-image: url();
+  background-size: cover;
+  background-position: center;
+}
+
+.centered-content {
+  text-align: center;
+  color: black;
+}
+
+.logo {
+  background: red;
+  color: black;
+  padding: 5px 10px;
+  border-radius: 5px;
+}
