--- a/src/index.css
+++ b/src/index.css
@@ -19,14 +19,42 @@ code {
   align-items: center;
   height: 100vh;
   
-  background-image: url();
+  background-image: url("../public/images/homeeee.jpg");
   background-size: cover;
   background-position: center;
 }
 
+.products-container{
+    background-image: url("../public/images/products.jpg");
+}
+
+.login-container{
+  background-image: url("../public/images/loginRegister.jpg");
+}
+
+.listprod-container {
+  background-image: url("../public/images/listProd.jpg");
+}
+
+.listuse-container {
+  background-image: url("../public/images/gestuse.jpg");
+}
+
+.cart-container {
+    background-image: url("../public/images/panier.jpg");
+}
+
+.profil-container {
+  background-image: url("../public/images/profil.jpg");
+}
+
 .centered-content {
   text-align: center;
-  color: black;
+  color: white;
+}
+
+.putprod-container {
+    background-image: url("../public/images/putprod.jpg");
 }
 
 .logo {
